name:                arrow
version:             0.3
license:             MIT
license-file:        LICENSE
author:              Scott Kovach
maintainer:          dskovach@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Monad, Types, Graph, Rules, Parser, Update, Reflection, Convert, Index, Expr, Parse, REPL, Iterate
  build-depends:       base >=4.9, random >=1.1 && <1.2, containers>=0.5.7.1,
                       unordered-containers, hashable,
                       ansi-terminal >=0.6 && <0.7, mtl
  default-language:    Haskell2010
  other-extensions:    TupleSections, OverloadedStrings, ForeignFunctionInterface
  ghc-options:         -fwarn-unused-binds
                       -fwarn-incomplete-patterns

executable arrow-profile
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       arrow, base >=4.9, random >=1.1 && <1.2, containers>=0.5.7.1,
                       ansi-terminal >=0.6 && <0.7, mtl, text
  default-language:    Haskell2010
  other-extensions:    TupleSections, OverloadedStrings
  ghc-options:         -fwarn-unused-binds
                       -O1
                       "-with-rtsopts=-p -s -h -i0.1"

test-suite unit-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Main.hs
  build-depends:       arrow, base >=4.9, random >=1.1 && <1.2, containers>=0.5.7.1, ansi-terminal >=0.6 && <0.7
  default-language:    Haskell2010
  other-extensions:    TupleSections, OverloadedStrings
  ghc-options:         -fwarn-unused-binds
                       -fwarn-incomplete-patterns

executable arrow-server
  hs-source-dirs:     server
  main-is:            Main.hs
  other-modules:      BroadcastServer
  build-depends:      arrow, base >=4.9, containers>=0.5.7.1, mtl,
                      wai, wai-app-static, wai-websockets, websockets, warp,
                      text, bytestring, aeson, directory
  default-language:    Haskell2010
  ghc-options:         -fwarn-unused-binds
                       -fwarn-incomplete-patterns
